--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Heading1</h1>
+    <h2>Heading2</h2>
+    <h3>Heading3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est magni voluptatem asperiores ipsam autem quidem earum consequatur aliquam, natus dolor!</p>
 </body>
 </html>
